--- a/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
+++ b/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="GrapplingHook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MiniMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GrapplingHook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
