--- a/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj
+++ b/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="MiniMap.cpp" />
     <ClCompile Include="Move.cpp" />
+    <ClCompile Include="MusicManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="MiniMap.h" />
     <ClInclude Include="Move.h" />
+    <ClInclude Include="MusicManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="State.h" />
