--- a/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
+++ b/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MusicManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -122,8 +125,11 @@
     <ClInclude Include="LicenseScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MusicManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="MainMenu.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
