--- a/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
+++ b/Grapple_Jump/Grapple_Jump/Grapple_Jump.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="LoadingScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Death.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -153,6 +156,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LoadingScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Death.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
